Fixed temperature legend squished for portrait

--- a/src/components/TemperatureChart/TemperatureChart.css
+++ b/src/components/TemperatureChart/TemperatureChart.css
@@ -3,8 +3,8 @@
 .temperature-legend-container {
     position: absolute;
     left: 100%;
-    top: 0px;
-    bottom: 0px;
+    width: 15px;
+    height: 100%;
     transform: translate(15px, 0px);
     display: block;
     /* border: 1px solid red; */
@@ -13,16 +13,10 @@
 .temperature-legend-container > canvas {
     display: block;
     height: 100%;
-    width: 15px;
+    width: 100%;
 }
 
 @media only screen and (max-width: 1350px) {
-    .temperature-legend-container {
-        position: static;
-        transform: none;
-        margin-left: 15px;
-    }
-
     #temperature-visual-container {
         margin-left: 0px;
     }
